--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,8 +16,8 @@ import Label from './component_label.astro';
   </style>
   <body>
     <Label />
+    <!-- <Label />
     <Label />
-    <Label />
-    <Label />
+    <Label /> -->
   </body>
 </html>
