fix : try re-using component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,15 +11,12 @@ import Label from './component_label.astro';
       rel="stylesheet" />
     <title>Nutrition Label</title>
   </head>
-	<style>
-    @import '../styles/styles.scss';
-  </style>
   <body>
-    <!-- <Label />
     <Label />
     <Label />
-    <Label /> -->
-    <div class="label">
+    <Label />
+    <Label />
+    <!-- <div class="label">
       <header>
         <h1 class="bold">Nutrition Facts</h1>
         <div class="divider"></div>
@@ -85,6 +82,9 @@ import Label from './component_label.astro';
           general nutrition advice.
         </p>
       </div>
-    </div>
+    </div> -->
   </body>
+  <style>
+    @import '../styles/styles.scss';
+  </style>
 </html>
