--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,11 +1,32 @@
 $font-size: 16px;
 $background-color: #000000;
 $text-color: #ffffff;
-$border-color: #ffffff;
-$border-bottom-color: #888989;
+
+$border-color-default: #ffffff;
+$border-bottom-color-default: #888989;
+
+$mac-n-cheese: #f19703;
+$mac-n-cheese-divider: #f2c99b;
+
+$camel-milk: #2095c7;
+$camel-milk-divider: #106c92;
 
 @mixin label {
-  border: 2px solid $border-color;
+  border: 6px solid $border-color-default;
+  width: 320px;
+  margin: 21px;
+  padding: 0 7px;
+}
+
+@mixin mac-n-cheese-label {
+  border: 4px solid $mac-n-cheese;
+  width: 320px;
+  margin: 21px;
+  padding: 0 7px;
+}
+
+@mixin camel-milk-label {
+  border: 4px solid $camel-milk;
   width: 320px;
   margin: 21px;
   padding: 0 7px;
@@ -18,7 +39,7 @@ $border-bottom-color: #888989;
 }
 
 @mixin divider {
-  border-bottom: 1px solid $border-bottom-color;
+  border-bottom: 1px solid $border-bottom-color-default;
   margin: 2px 0;
 }
 
@@ -28,13 +49,13 @@ $border-bottom-color: #888989;
 
 @mixin large {
   height: 10px;
-  background-color: $border-color;
+  background-color: $border-color-default;
   border: 0;
 }
 
 @mixin medium {
   height: 5px;
-  background-color: $border-color;
+  background-color: $border-color-default;
   border: 0;
 }
 
@@ -77,7 +98,7 @@ $border-bottom-color: #888989;
   margin: 5px 0;
 }
 
-.wen-xing-ti-xing {
+.wen-xin-ti-xing {
   padding: 4px;
 }
 
@@ -97,15 +118,45 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  align-items: flex-start;
   justify-content: center;
+}
+
+.daily-value {
+  p:not(.no-divider) {
+    @include divider;
+    border-bottom: 1px solid $border-color-default  
+  }
 }
 
 .label {
   @include label;
 }
 
-header h1 {
-  @include header;
+.label-mac-n-cheese {
+  @include mac-n-cheese-label;
+  .daily-value {
+    p:not(.no-divider) {
+      @include divider;
+      border-bottom: 1px solid $mac-n-cheese-divider 
+    }
+  }
+}
+
+.label-camel-milk {
+  @include camel-milk-label;
+  .daily-value {
+    p:not(.no-divider) {
+      @include divider;
+      border-bottom: 1px solid $camel-milk-divider 
+    }
+  }
+}
+
+header {
+  h1, h2, h3 {
+    @include header;
+  }
 }
 
 p {
@@ -121,6 +172,14 @@ p {
   @include divider;
 }
 
+.devider-mac-n-cheese {
+  border-bottom: 1px solid $mac-n-cheese-divider;
+}
+
+.devider-camel-milk {
+  border-bottom: 1px solid $camel-milk-divider;
+}
+
 .bold {
   @include bold;
 }
@@ -131,6 +190,28 @@ p {
 
 .medium {
   @include medium;
+}
+
+.label-camel-milk {
+  .large {
+    @include large;
+    background-color: $camel-milk;
+  }
+  .medium {
+    @include medium;
+    background-color: $camel-milk;
+  }
+}
+
+.label-mac-n-cheese {
+  .large {
+    @include large;
+    background-color: $mac-n-cheese;
+  }
+  .medium {
+    @include medium;
+    background-color: $mac-n-cheese;
+  }
 }
 
 .small-text {
@@ -144,7 +225,7 @@ p {
     margin: 0;
   }
 
-  .calories-info-span {
+  span  {
     @include calories-info-span;
   }
 }
@@ -165,16 +246,6 @@ p {
   @include indent(2em);
 }
 
-.daily-value {
-  p:not(.no-divider) {
-    @include divider;
-  }
-}
-
 .note {
   @include note;
-}
-
-.label-lightgreen {
-  color: lightgreen;
 }
