--- a/src/temlplates/lb_camel_milk.astro
+++ b/src/temlplates/lb_camel_milk.astro
@@ -1,3 +1,6 @@
+---
+import '../styles/styles.scss';
+---
 <div class="label label-camel-milk">
   <header>
     <h1 class="bold">Nutrition Facts</h1>
