--- a/src/temlplates/lb_pork_n_beans.astro
+++ b/src/temlplates/lb_pork_n_beans.astro
@@ -1,3 +1,6 @@
+---
+import '../styles/styles.scss';
+---
 <div class="label label-pork-n-beans">
   <header>
     <h1 class="bold">Nutrition Facts</h1>
