--- a/src/temlplates/lb_camel_milk.astro
+++ b/src/temlplates/lb_camel_milk.astro
@@ -52,7 +52,9 @@ import '../styles/styles.scss';
       <div class="divider devider-camel-milk"></div>
     </p> -->
     <p>
-      <span><span class="bold">Cholesterol</span> 21mg</span></span>
+      <span>
+        <span class="bold">Cholesterol</span> 21mg
+      </span>
       <span class="bold">7%</span>
     </p>
     <p>
