--- a/src/temlplates/lb_default.astro
+++ b/src/temlplates/lb_default.astro
@@ -35,7 +35,9 @@ import '../styles/styles.scss';
     <p class="indent no-divider"><span><i>Trans</i> Fat 0g</span></p>
     <div class="divider"></div>
     <p>
-      <span><span class="bold">Cholesterol</span> 0mg</span>
+      <span>
+        <span class="bold">Cholesterol</span> 0mg
+      </span>
       <span class="bold">0%</span>
     </p>
     <p>
