--- a/src/temlplates/lb_pork_n_beans.astro
+++ b/src/temlplates/lb_pork_n_beans.astro
@@ -37,7 +37,7 @@ import '../styles/styles.scss';
     <div class="divider "></div>
     <p>
       <span>
-        <span class="bold">Cholesterol</span> 0mg</span>
+        <span class="bold">Cholesterol</span> 0mg
       </span>
       <span class="bold">0%</span>
     </p>
