--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-	<style> @import './styles/styles.scss'; </style>
+	<style> @import '/styles.scss'; </style>
 	<body>
 		<div class="container"></div>
 	</body>
