--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import './styles/styles.scss'
 ---
 
 <html lang="en">
@@ -9,7 +10,7 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-	<style> @import '/styles.scss'; </style>
+	<!-- <style> @import '/styles/styles.scss'; </style> -->
 	<body>
 		<div class="container"></div>
 	</body>
