--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,11 +15,11 @@ import './styles/styles.scss' // otherwise deployment w/o css
 		<div class="container"></div>
 	</body>
 	<script>
-		const path: string = 'https://catfact.ninja/fact'
-		const FetchData = async ( path: string ): Promise<string[]> => {
+		
+		const FetchData = async ( url: string ): Promise<string[]> => {
 
 			try {
-				const resp = await fetch( path )
+				const resp = await fetch( url )
 				const jsn = await resp.json()
 				return jsn
 			} catch (error: any) {
@@ -27,7 +27,11 @@ import './styles/styles.scss' // otherwise deployment w/o css
 				throw error
 			}
 		}
-		const stuffGotFromAPI = FetchData(path)
+
+		const catPath: string = 'https://catfact.ninja/fact'
+
+		const stuffGotFromAPI = FetchData(catPath)
+
 		stuffGotFromAPI.then((stuff) => {
 
 			const cont = document.querySelector('.container')
@@ -44,7 +48,7 @@ import './styles/styles.scss' // otherwise deployment w/o css
 			const olderFactR = document.createElement('span')
 
 			olderFactL.className = 'older-fact-L'
-			olderFactL.textContent = 'Pre-previously on `catfact.ninja`: \n'
+			olderFactL.textContent = 'Pre-previously on Cat Fact: \n'
 			olderFactR.className = 'older-fact-R'
 			olderFactR.textContent = localOlderFact.fact
 			// console.log(localOlderFact.oldFact)
@@ -55,7 +59,7 @@ import './styles/styles.scss' // otherwise deployment w/o css
 			const oldFactR = document.createElement('span')
 
 			oldFactL.className = 'old-fact-L'
-			oldFactL.textContent = 'Previously on `catfact.ninja`: \n'
+			oldFactL.textContent = 'Previously on Cat Fact: \n'
 			oldFactR.className = 'old-fact-R'
 			oldFactR.textContent = localOldFact.fact
 			// console.log(localOldFact.oldFact)
@@ -66,18 +70,19 @@ import './styles/styles.scss' // otherwise deployment w/o css
 			const currFactR = document.createElement('span')
 
 			currFactL.className = 'curr-fact-L'
-			currFactL.textContent = 'From `catfact.ninja`: \n'
+			currFactL.textContent = 'Currently from Cat Fact`: \n'
 			currFactR.className = 'curr-fact-R'
 			currFactR.textContent = stuff['fact']
 
 
 			// append them all & manage storage
-			cont.appendChild(olderFactL)
-			cont.appendChild(olderFactR)
-			cont.appendChild(oldFactL)
-			cont.appendChild(oldFactR)
 			cont.appendChild(currFactL)
 			cont.appendChild(currFactR)
+			cont.appendChild(oldFactL)
+			cont.appendChild(oldFactR)
+			cont.appendChild(olderFactL)
+			cont.appendChild(olderFactR)
+
 
 			window.localStorage.setItem('olderFact', JSON.stringify(localOldFact))
 			window.localStorage.setItem('oldFact', JSON.stringify(stuff))
