--- a/src/pages/styles/styles.scss
+++ b/src/pages/styles/styles.scss
@@ -62,3 +62,9 @@ body {
     @include animation-rainbow-rotate;
   }
 }
+
+@media only screen and (max-width: 720px) {
+  body {
+    font-size: calc($TEXTSize * .75);
+  }
+}
