--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,11 @@ import './styles/styles.scss' // otherwise deployment w/o css
 	</head>
 	<!-- <style> @import '/styles/styles.scss'; </style> -->
 	<body>
-		<div class="container"></div>
+		<div class="container">
+			<button class='btn' onclick="window.location.href='http://nuoxoxo.github.io';">
+        &nbsp;io&nbsp;
+      </button>
+		</div>
 	</body>
 	<script>
 		
