--- a/src/pages/styles/styles.scss
+++ b/src/pages/styles/styles.scss
@@ -2,10 +2,19 @@ $BG: #000000;
 $TEXTColor: #ffffff;
 $TEXTSize: 21px;
 $FONT: 'Courier New', Courier, monospace;
+
+$TransitionS: .2s;
+
 $COLOR-TEAL-DEER: #99E6B9;
 $COLOR-SQUASH: #F2AB15;
 $COLOR-VIOLET: #C687E5;
 $COLOR-JOKE: #ecf9b9;
+$COLOR-WATER-GREEN: #23aeba;
+$COLOR-CREAM-YELLO: #FFFDD0;
+
+$ButtonColor: $COLOR-CREAM-YELLO;
+$ButtonHoverColor: $COLOR-WATER-GREEN;
+$ButtonOutline: 2px;
 
 @keyframes rainbow-rotate {
   from {
@@ -25,6 +34,37 @@ $COLOR-JOKE: #ecf9b9;
   flex-direction: column;
 }
 
+body {
+  @include body-general
+}
+
+@mixin button-style {
+
+  color: $ButtonColor;
+  border: $ButtonOutline solid $ButtonColor;
+  border-radius: 12px;
+  font-size: $TEXTSize;
+  padding: 5px;
+  width: 77px;
+  background-color: transparent;
+  transition: background-color $TransitionS ease, color $TransitionS ease, border $TransitionS ease;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  white-space:normal;
+
+  &:hover {
+    background-color: $ButtonColor;
+    color: $ButtonHoverColor;
+    border: $ButtonOutline solid $ButtonHoverColor;
+  }
+}
+
+.btn {
+  @include button-style;
+}
+
 @mixin animation-rainbow-rotate {
 
   animation: rainbow-rotate 42s;
@@ -32,14 +72,10 @@ $COLOR-JOKE: #ecf9b9;
   // animation-direction: alternate;
 }
 
-body {
-  @include body-general
-}
-
 .container {
   display: flex;
   flex-direction: column;
-  span {
+  span, button {
     margin: 2% 1% 0 3%;
   }
   .older-fact-R {
@@ -67,4 +103,9 @@ body {
   body {
     font-size: calc($TEXTSize * .75);
   }
+  // .btn {
+  //   font-size: 10px;
+  //   width: 42px;
+  //   padding: 2px;
+  // }
 }
