--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import "./styles/styles.scss" // otherwise deployment w/o css
       </button>
     </div>
   </body>
-  <script>
+  <!-- <script>
     const FetchData = async (url) => {
       try {
         const response = await fetch(url)
@@ -142,9 +142,10 @@ import "./styles/styles.scss" // otherwise deployment w/o css
     })()
   </script>
 
+  -->
+
   <!-- Old version 👇 -->
 
-	<!-- 
 	<script>
     const FetchData = async (url: string): Promise<string[]> => {
       try {
@@ -252,5 +253,5 @@ import "./styles/styles.scss" // otherwise deployment w/o css
 			// window.localStorage.setItem('fact', JSON.stringify(stuff))
     })
   </script>
-	-->
+
 </html>
