move btn to lower body

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,12 +13,12 @@ import "./styles/styles.scss" // otherwise deployment w/o css
   <!-- <style> @import '/styles/styles.scss' </style> -->
   <body>
     <div class="container">
-      <button
+      <!-- <button
         class="btn"
         onclick="window.location.href='http://nuoxoxo.github.io'"
       >
         &nbspio&nbsp
-      </button>
+      </button> -->
     </div>
   </body>
   <script>
@@ -136,10 +136,24 @@ import "./styles/styles.scss" // otherwise deployment w/o css
 
         displayJoke(jokesFromAPI)
         displayCatFact(catStuffFromAPI, localFacts)
+
+        const ctn = document.querySelector(".container")
+        const btn = document.createElement('button')
+        const btnName = document.createTextNode('\u00A0io\u00A0')
+        btn.className = 'btn'
+        btn.onclick = () => {
+          window.location.href = "http://nuoxoxo.github.io"
+        }
+        btn.appendChild(btnName)
+        ctn.appendChild(btn)
+
       } catch (error) {
         console.error("An error occurred: ", error)
       }
     })()
+
+
+
   </script>
 
   <!-- Old version 👇 -->
