--- a/src/App.css
+++ b/src/App.css
@@ -39,14 +39,13 @@ a:visited {
   height: var(--switch-label-outer-height);
 }
 
-/* Hide default HTML checkbox */
+/* hidefault checkbox */
 .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-/* The slider */
 .slider {
   position: absolute;
   cursor: pointer;
@@ -56,8 +55,8 @@ a:visited {
   bottom: 0;
   border-radius: 42px;
   background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: .2s;
+  transition: .2s;
 }
 
 /* out 34 : in 26 */
@@ -71,8 +70,8 @@ a:visited {
   bottom: 4px;
   border-radius: 50%;
   background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: .2s;
+  transition: .2s;
 }
 
 input:checked + .slider {
