--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,11 @@ input:checked + .slider:before {
 }
 
 
+@media only screen and (max-width: 768px) {
+  button {font-size: 10px}
+  
+}
+
 /* p {
     display: flex;
     justify-content: center;
